<resources>
    <string name="app_name">PokeApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="poke_app">PokeApp</string>
    <string name="poke_names">Pokemon Names</string>
    <string name="pokemon_logo">Pokemon logo</string>
    <string name="recycler_view">Recycler View</string>
    <string name="random_pokemon">Random Pokemon</string>
    <string name="pokemon_types">Pokemon Types</string>
    <string name="pokemon_details">Pokemon Details</string>
    <string name="name" >Name:</string>
    <string name="hexadecimal">Hexadecimal:</string>
    <string name="press_button">Press the button to get a random pokemon!</string>
    <string name="pokemon_name">Pokemon Name:</string>
    <string name="pokemon_id">Pokemon Id:</string>
    <string name="pokemon_abilities">Pokemon Abilities:</string>
    <string name="pokemons" >Pokemons:</string>
</resources>