<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/titleFragment">

    <fragment
        android:id="@+id/titleFragment"
        android:name="com.example.pokeapp.title.TitleFragment"
        android:label="@string/poke_app"
        tools:layout="@layout/fragment_title">
        <action
            android:id="@+id/action_titleFragment_to_pokemonListFragment"
            app:destination="@id/pokemonListFragment" />
        <action
            android:id="@+id/action_titleFragment_to_randomPokemonFragment"
            app:destination="@id/randomPokemonFragment" />
        <action
            android:id="@+id/action_titleFragment_to_recycleFragment"
            app:destination="@id/recycleFragment" />
    </fragment>
    <fragment
        android:id="@+id/pokemonListFragment"
        android:name="com.example.pokeapp.pokemon.list.PokemonListFragment"
        android:label="@string/poke_names"
        tools:layout="@layout/fragment_pokemon_list">
        <action
            android:id="@+id/action_pokemonListFragment_to_pokemonDetailsFragment"
            app:destination="@id/pokemonDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/pokemonDetailsFragment"
        android:name="com.example.pokeapp.pokemon.details.PokemonDetailsFragment"
        android:label="@string/pokemon_details"
        tools:layout="@layout/fragment_pokemon_details">
        <argument
            android:name="pokemonId"
            app:argType="long" />
    </fragment>
    <fragment
        android:id="@+id/randomPokemonFragment"
        android:name="com.example.pokeapp.pokemon.random.RandomPokemonFragment"
        android:label="@string/random_pokemon"
        tools:layout="@layout/fragment_random_pokemon" />
    <fragment
        android:id="@+id/recycleFragment"
        android:name="com.example.pokeapp.pokemon.recycle.RecycleFragment"
        android:label="@string/recycler_view"
        tools:layout="@layout/fragment_recycle" >
        <action
            android:id="@+id/action_recycleFragment_to_pokemonDetailsFragment"
            app:destination="@id/pokemonDetailsFragment" />
    </fragment>
</navigation>