<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".title.TitleFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_blue"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/pokemonLogo"
            android:layout_width="wrap_content"
            android:layout_height="110dp"
            android:layout_margin="25dp"
            android:contentDescription="@string/pokemon_logo"
            android:src="@drawable/pokemon_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/pokeNameButton"
            android:layout_width="@dimen/basic_button_size"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/distance_between_elements"
            android:text="@string/poke_names"
            android:textColor="@color/yellow"
            app:backgroundTint="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pokemonLogo" />

        <Button
            android:id="@+id/randomPokeButton"
            android:layout_width="@dimen/basic_button_size"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/distance_between_elements"
            android:text="@string/random_pokemon"
            android:textColor="@color/yellow"
            app:backgroundTint="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pokeNameButton" />

        <Button
            android:id="@+id/recycleViewButton"
            android:layout_width="@dimen/basic_button_size"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/distance_between_elements"
            android:text="@string/recycler_view"
            android:textColor="@color/yellow"
            app:backgroundTint="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/randomPokeButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>